<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statystyki">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_dynamic_primary90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/statystyki_txt_naglowek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineBreakWordStyle="phrase"
            android:text="@string/statystyki_txt_naglowek"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <Button
            android:id="@+id/statystyki_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statystyki_btn_back"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.911"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.916" />

        <Button
            android:id="@+id/statystyki_btn_spalone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statystyki_btn_spalone"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

        <Button
            android:id="@+id/statystyki_btn_kasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statystyki_btn_kasa"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

        <Button
            android:id="@+id/statystyki_btn_NIEWIEM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statystyki_ButtonTemp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.858"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

        <TextView
            android:id="@+id/statystyki_txt_spaloneInfo"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/teal_200"
            android:text="@string/statystyki_txt_spaloneInfo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22" />

        <TextView
            android:id="@+id/statystyki_txt_spalone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statystyki_txt_spalone1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.321" />

        <TextView
            android:id="@+id/statystyki_txt_spalone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statystyki_txt_spalone2"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.321" />

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_vertical|center"
            android:gravity="center_horizontal|center_vertical"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statystyki_btn_kasa"
            app:layout_constraintVertical_bias="0.26">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/statystyki_txt_dzisiajInfo"
                    style="@style/Widget.AppCompat.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:fadingEdge="horizontal"
                    android:lineBreakStyle="normal"
                    android:text="@string/statystyki_txt_dzisiajInfo"

                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/statystyki_txt_dzisiajInfo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:text="@string/statystyki_txt_dzisiajInfo1"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/statystyki_txt_tydzienInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/teal_200"
                    android:text="@string/statystyki_txt_tydzienInfo"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/statystyki_txt_tydzienInfo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/teal_200"
                    android:text="@string/statystyki_txt_tydzienInfo1"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/statystyki_txt_miesiacInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:text="@string/statystyki_txt_miesiacInfo"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/statystyki_txt_miesiacInfo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:text="@string/statystyki_txt_miesiacInfo1"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/statystyki_txt_wszystkieInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/teal_200"
                    android:text="@string/statystyki_txt_wszystkieInfo"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/statystyki_txt_wszystkieInfo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/teal_200"
                    android:text="@string/statystyki_txt_wszystkieInfo1"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>